--- a/sh-front-main/package.json
+++ b/sh-front-main/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "firebase": "^10.5.2",
     "framer-motion": "^10.16.1",
     "graphql": "^16.8.0",
     "jwt-decode": "^3.1.2",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
     "react-social-login-buttons": "^3.9.1",
     "reactjs-social-login": "^2.6.2",
