--- a/sh-api-recomendation-main/docker-compose.yml
+++ b/sh-api-recomendation-main/docker-compose.yml
@@ -20,12 +20,12 @@ services:
       - NEO4J_AUTH=neo4j/sh-1234
       - NEO4JLABS_PLUGINS=["graph-data-science"]
       - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
-      - EXTENSION_SCRIPT= /entrypoint.sh
+      - EXTENSION_SCRIPT=/entrypoint.sh
     ports:
       - "7474:7474"
       - "7687:7687"
     volumes:
-      - ./neo4j-data:/data
+      - ./neo4j-data:/data:rw
     networks:
       - sh-network
   
