--- a/sh-front-main/package.json
+++ b/sh-front-main/package.json
@@ -8,7 +8,10 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@reach/combobox": "^0.18.0",
+    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "@vis.gl/react-google-maps": "^0.4.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "firebase": "^10.5.2",
@@ -31,6 +34,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "swiper": "^8.4.4",
+    "use-places-autocomplete": "^4.0.1",
     "wouter": "^2.11.0"
   },
   "scripts": {
