--- a/sh-front-main/package.json
+++ b/sh-front-main/package.json
@@ -14,6 +14,7 @@
     "@vis.gl/react-google-maps": "^0.4.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.30.0",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.1",
     "graphql": "^16.8.0",
