--- a/sh-students-main/Dockerfile
+++ b/sh-students-main/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:buster-slim as base
-RUN apt-get update \
-    && apt-get install --no-install-recommends -y curl=7.64.0-4+deb10u6 ca-certificates=20200601~deb10u2 \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && \
+    apt-get install --no-install-recommends -y curl ca-certificates && \
+    rm -rf /var/lib/apt/lists/*
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN curl https://get.volta.sh | bash -s -- --version 1.1.1
 ENV PATH="/root/.volta/bin:${PATH}"
