--- a/sh-front-main/package.json
+++ b/sh-front-main/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.30.0",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.1",
+    "geolib": "^3.3.4",
     "graphql": "^16.8.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
