--- a/sh-front-main/package.json
+++ b/sh-front-main/package.json
@@ -11,7 +11,7 @@
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.5",
-    "@vis.gl/react-google-maps": "^0.4.0",
+    "@vis.gl/react-google-maps": "^0.4.1",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
@@ -20,6 +20,7 @@
     "geolib": "^3.3.4",
     "graphql": "^16.8.0",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-geocode": "^0.2.3",
@@ -27,8 +28,10 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.17.0",
+    "react-script-loader-hoc": "^1.2.2",
     "react-scripts": "^5.0.1",
     "react-social-login-buttons": "^3.9.1",
     "reactjs-social-login": "^2.6.2",
