--- a/sh-front-main/package.json
+++ b/sh-front-main/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.8.1",
     "@chakra-ui/icons": "^2.1.0",
     "@chakra-ui/react": "^2.8.0",
+    "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@reach/combobox": "^0.18.0",
@@ -14,6 +15,7 @@
     "@vis.gl/react-google-maps": "^0.4.1",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.1",
@@ -43,9 +45,9 @@
     "wouter": "^2.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
